<?xml version="1.0"?>
<package>
  <name>valeport_altimeter</name>
  <version>0.0.1</version>
  <description>The valeport_altimeter package</description>

  <maintainer email="miquel.massot@gmail.com">Miquel Massot</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/valeport_altimeter</url>


  <author email="miquel.massot@gmail.com">Miquel Massot</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
